--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
-        <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<style>
 		body {
 			background-color: #222;
