--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,8 @@
         <title>Hello Copernicus!</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="./copernicus.js"></script>
-
+		<link rel="stylesheet" href="./styles.css" />
 		<style>
-		body {
-			background-color: #222;
-			overflow: hidden;
-			padding: 0;
-			margin: 0;
-		}
-		canvas {
-		  position: fixed;
-		  top: 50%;
-		  left: 50%;
-		  margin-top: -1000px;
-		  margin-left: -1000px;
-		}
-		.menu {
-			position: fixed; top:20px; left:20px; z-index:100;
-		}
 		</style>
 
     </head>
