--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 		<option value="6">Saturn</option>
 	</select>
 	
-	<input type="button" onClick="setZoom(zoom-.2)" value="-" />
-	<input type="button" onClick="setZoom(zoom+.2)" value="+" />
+	<input type="button" onClick="setZoom(-0.2)" value="-" />
+	<input type="button" onClick="setZoom(0.2)" value="+" />
 	</div>
 
     </body>
