--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello Copernicus!</title>
+        <title>Hello, Copernicus!</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 		<script src="./copernicus.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="./styles.css" />
 		<style>
 		</style>
